# zellij-tab-sidebar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
contrib/: claude-code-hook.sh  pi-extension.ts  summarize-pane.sh
src/: main.rs
